[package]
name = "scaffold"
version = "0.2.0"
edition = "2021"
authors = ["Michael Trang<michael.trang@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
slug = "0.1.4"
